// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Numbers component should add class name "selected" to selected numbers 1`] = `
<div
  className="card border-primary text-center mt-5"
>
  <div
    className="number"
  >
    <span
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="0"
    >
      1
    </span>
    <span
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="0"
    >
      2
    </span>
    <span
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="0"
    >
      3
    </span>
    <span
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="0"
    >
      4
    </span>
    <span
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="0"
    >
      5
    </span>
    <span
      className="selected"
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="0"
    >
      6
    </span>
    <span
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="0"
    >
      7
    </span>
    <span
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="0"
    >
      8
    </span>
    <span
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="0"
    >
      9
    </span>
  </div>
</div>
`;

exports[`Numbers component should add class name "used" to used numbers 1`] = `
<div
  className="card border-primary text-center mt-5"
>
  <div
    className="number"
  >
    <span
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="0"
    >
      1
    </span>
    <span
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="0"
    >
      2
    </span>
    <span
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="0"
    >
      3
    </span>
    <span
      className="used"
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="0"
    >
      4
    </span>
    <span
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="0"
    >
      5
    </span>
    <span
      className="selected"
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="0"
    >
      6
    </span>
    <span
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="0"
    >
      7
    </span>
    <span
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="0"
    >
      8
    </span>
    <span
      className="used"
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="0"
    >
      9
    </span>
  </div>
</div>
`;

exports[`Numbers component should render component successfully 1`] = `
<div
  className="card border-primary text-center mt-5"
>
  <div
    className="number"
  >
    <span
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="0"
    >
      1
    </span>
    <span
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="0"
    >
      2
    </span>
    <span
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="0"
    >
      3
    </span>
    <span
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="0"
    >
      4
    </span>
    <span
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="0"
    >
      5
    </span>
    <span
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="0"
    >
      6
    </span>
    <span
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="0"
    >
      7
    </span>
    <span
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="0"
    >
      8
    </span>
    <span
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="0"
    >
      9
    </span>
  </div>
</div>
`;
